--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://patoi.github.com
-title: Blogging about software development
-subtitle: 
+title: developerof.com
+subtitle: Blogging about software development
 author: István Pató
 simple_search: http://google.com/search
 description:
