--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://patoi.github.com
-title: developerof<span style="color:red">.</span>com
+title: developerof.com
 subtitle: Software development - Do you see the whole picture?
 author: István Pató
 simple_search: http://google.com/search
