--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://patoi.github.com
+url: http://www.developerof.com
 title: developerof.com
 subtitle: Software development - Do you see the whole picture?
 author: István Pató
