--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/gravatar.html, asides/twitter.html, asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: [custom/asides/gravatar.html, asides/twitter.html, asides/recent_posts.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -58,17 +58,17 @@ default_asides: [asides/gravatar.html, asides/twitter.html, asides/recent_posts.
 # ----------------------- #
 
 #gravatar
-gravatar_hash: 44a636098dd3f7c87dfc2af6f95bf504
+gravatar_hash: bccd8a27bbf77651c3ad812e55df4a60
 
 # Github repositories
 github_user: patoi
-github_repo_count: 0
+github_repo_count: 1
 github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
 twitter_user: patoistvan
-twitter_tweet_count: 4
+twitter_tweet_count: 2
 twitter_show_replies: false
 twitter_follow_button: true
 twitter_show_follower_count: true
